Set correct git-gat

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="pure-snow.js-master/pure-snow.js" defer></script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L3508P7RHH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N7GRZNMS5E"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'G-L3508P7RHH');
+    gtag('config', 'G-N7GRZNMS5E');
     </script>
-
 </head>
 
 <body>
