--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Koliadky on Santana row-cols-md-3</title>
+    <title>Koliadky on Santana Row</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
