--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <title>Koliadky on Santana Row</title>
+    <meta property="og:title" content="Koliadky on Santana Row">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
