--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N7GRZNMS5E"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-N7GRZNMS5E');
+        gtag('config', 'G-N7GRZNMS5E');
     </script>
 </head>
 
@@ -56,7 +56,8 @@
                         </ul>
                     </li>
 
-                    <a href="#listen" class="nav-item nav-link"><i class="fas fa-headphones"></i> Listen to Ukrainian Christmas Music </a>
+                    <a href="#listen" class="nav-item nav-link"><i class="fas fa-headphones"></i> Listen to Ukrainian
+                        Christmas Music </a>
                 </div>
 
                 <div class="navbar-nav ms-auto">
@@ -65,6 +66,7 @@
                         <i class="fas fa-hand-holding-heart"></i> DONATE
                     </a>
                     <a href="https://unwla.org/" class="nav-item nav-link" target="_blank">ABOUT US</a>
+
                 </div>
             </div>
 
@@ -107,6 +109,14 @@
                             </div>
                         </div>
                     </div> -->
+
+                </div>
+
+                <div class="email">
+
+                    <h2 class="custom-h2" style="text-align: center; padding: 2rem;" >
+                        Questions? Email us here: <i class="fas fa-envelope"></i> branch107@unwla.org
+                    </h2>
 
                 </div>
             </div>
@@ -586,12 +596,13 @@
 
     <!-- Ukrainian Music -->
     <div id="listen" class="py-5 mb-2 bg-light">
-        <h2 class="custom-h2 text-center display-4 mb-3 animated slideInDown" style="font-weight: bold;"><i class="fas fa-headphones"></i> Listen to
+        <h2 class="custom-h2 text-center display-4 mb-3 animated slideInDown" style="font-weight: bold;"><i
+                class="fas fa-headphones"></i> Listen to
             Ukrainian Christmas Music
         </h2>
         <div class="container">
             <p class="animated slideInDown" style="font-size: 1.0rem;">
-                
+
                 Immerse yourself in the enchanting melodies of Ukrainian Christmas music. Let these timeless tunes
                 transport you to a world brimming with festive joy and rich cultural heritage. Explore the soulful
                 rhythms and heartfelt lyrics that capture the essence of the holiday season. Indulge in the warmth and
@@ -607,7 +618,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen>
                 </iframe>
-                
+
             </div>
         </div>
     </div>
@@ -633,7 +644,8 @@
         <div class="row">
             <ul>
 
-                <li><a href="https://maps.app.goo.gl/t5UGXyqRVzAvY6hM7" target="_blank">Park Valencia | Santana Row |
+                <li><a href="https://maps.app.goo.gl/t5UGXyqRVzAvY6hM7" target="_blank"> <i
+                            class="fas fa-map-marker"></i> Park Valencia | Santana Row |
                         3055 Olin Avenue, San Jose, CA</a>
                 </li>
 
