--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 <div class="email">
 
-                    <h2 class="custom-h2" style="text-align: center; padding: 2rem;" >
+                    <h2 class="custom-h2" style="text-align: center; padding: 2rem;">
                         Questions? Email us here: <i class="fas fa-envelope"></i> branch107@unwla.org
                     </h2>
 
@@ -155,13 +155,10 @@
                             <p>Застеляйте столи та все килимами,<br>
                                 Та кладіть калачі з ярої пшениці.<br>
                                 Бо прийдуть до тебе три празники в гості:<br>
-                                Ой що перший празник – Рождество Христове.<br>
-                                А другий вже празник – Святого Василя,<br>
-                                А третій вже празник – Святі Водохрещі.<br>
-                                А що перший празник зішле тобі втіху,<br>
-                                А що другий празник зішле тобі щастя,<br>
-                                А що третій празник зішле всім нам долю,<br>
-                                Зішле всім нам долю, Україні волю.</p>
+                                А що перший празник – Рождество Христове.<br>
+                                А другий же празник – Святого Василя,<br>
+                                А третій же празник – Святі Водохреща.<br>
+                            </p>
 
                         </div>
                         <div class="separator"></div>
@@ -178,13 +175,10 @@
                             <p>Zastelyayte stoly ta vse kylymamy, <br>
                                 Ta kladitʹ kalachi z yaroyi pshenytsi. <br>
                                 Bo pryydutʹ do tebe try praznyky v hosti: <br>
-                                Oy shcho pershyy praznyk – Rozhdestvo Khrystove <br>
-                                A druhyy vzhe praznyk – Svyatoho Vasylya, <br>
-                                A tretiy vzhe praznyk – Svyati Vodokhreshchi. <br>
-                                A shcho pershyy praznyk zishle tobi vtikhu, <br>
-                                A shcho druhyy praznyk zishle tobi shchastya, <br>
-                                A shcho tretiy praznyk zishle vsim nam dolyu, <br>
-                                Zishle vsim nam dolyu, Ukrayini volyu. <br>
+                                A shcho pershyy praznyk – Rozhdestvo Khrystove <br>
+                                A druhyy zhe praznyk – Svyatoho Vasylya, <br>
+                                A tretiy zhe praznyk – Svyati Vodokhreshchi. <br>
+                                <br>
                             </p>
                         </div>
                     </div>
@@ -221,8 +215,8 @@
                             <p> Три славні царі (2) зі сходу приходять, <br>
                                 Ладан і смирну (2), золото приносять.</p>
 
-                            <p> Царю і Богу (2) тоє офірують, <br>
-                                Пастирі людям (2) все розповідують.</p>
+                            <p> Царю і Богу (2) ці дари віддають, <br>
+                                Пастирі людям (2) все розповідають.</p>
 
                             <p> І ми рожденну (2) Богу поклін даймо, <br>
                                 "Слава во вишних" (2) Йому заспіваймо.</p>
@@ -258,7 +252,7 @@
                                 Ladan i smyrnu (2), zoloto prynosyatʹ.
                             </p>
 
-                            <p>Tsaryu i Bohu (2) toye ofiruyutʹ, <br>
+                            <p>Tsaryu i Bohu (2) tsi dary viddayutʹ, <br>
                                 Pastyri lyudyam (2) vse rozpoviduyutʹ.
                             </p>
 
@@ -290,11 +284,11 @@
                                 На колінця припадають, Царя-Бога вихваляють.
                             </p>
 
-                            <p> – Ой ти, Царю, Царю, небесний Владарю, <br>
+                            <p> – Славим тебе Царю, небесний Владарю, <br>
                                 Даруй літа щасливії цього дому господарю.
                             </p>
 
-                            <p> Цього дому господарю і цій господині, <br>
+                            <p> Цього дому господарю і його родині, <br>
                                 Даруй літа щасливії нашій славній Україні!
                             </p>
                         </div>
@@ -317,11 +311,11 @@
                                 Na kolintsya prypadayutʹ, Tsarya-Boha vykhvalyayutʹ.
                             </p>
 
-                            <p> – Oy ty, Tsaryu, Tsaryu, nebesnyy Vladaryu, <br>
+                            <p> – Slavym tebe, Tsaryu, nebesnyy Vladaryu, <br>
                                 Daruy lita shchaslyviyi tsʹoho domu hospodaryu.
                             </p>
 
-                            <p>Tsʹoho domu hospodaryu i tsiy hospodyni, <br>
+                            <p>Tsʹoho domu hospodaryu i yoho rodyni, <br>
                                 Daruy lita shchaslyviyi nashiy slavniy Ukrayini!
                             </p>
 
@@ -400,24 +394,25 @@
                                 Пришли свої дари<br>
                                 Сьому господарю<br>
                             </p>
-                            <p>Прийшли три царі зі східної землі<br>
-                                Принесли дари Діві Марії<br>
-                                Покірно складають<br>
-                                І поклін віддають<br>
-                                Ісусові Христові<br>
-                                Покірно складають<br>
-                                І поклін віддають<br>
-                                Ісусові Христові<br>
+                            <p>Зійшли Ангели з неба доземлі, <br>
+                                Принесли дари Діві Марії: <br>
+                                Три свічі воскові, <br>
+                                Ще й ризи шовкові <br>
+                                Ісусови Христови. <br>
+                                Три свічі воскові, <br>
+                                Ще й ризи шовкові <br>
+                                Ісусови Христови. <br>
+
                             </p>
                             <p>
-                                Ой, засіяла звізда на небі<br>
-                                Прийшли ангели до Діві Марії<br>
-                                Співають Їй пісні<br>
-                                Господній Невісті<br>
-                                І радість приносять<br>
-                                Співають Їй пісні<br>
-                                Господній Невісті<br>
-                                І радість приносять<br>
+                                Засіяла звізда з неба до землі, <br>
+                                Зійшли Ангели к Діві Марії: <br>
+                                Співають Їй пісні <br>  
+                                Господній Невісті, <br>
+                                І радість приносять <br>
+                                Співають Їй пісні <br>  
+                                Господній Невісті, <br>
+                                І радість приносять <br>
 
                             </p>
                         </div>
@@ -447,24 +442,24 @@
                                 Sʹomu hospodaryu <br>
                             </p>
 
-                            <p> Pryyshly try tsary zi skhidnoyi zemli <br>
-                                Prynesly dary Divi Mariyi <br>
-                                Pokirno skladayutʹ <br>
-                                I poklin viddayutʹ <br>
-                                Isusovi Khrystovi <br>
-                                Pokirno skladayutʹ <br>
-                                I poklin viddayutʹ <br>
-                                Isusovi Khrystovi <br>
+                            <p> Ziyshli Anhely z neba do zemli, <br>
+                                Prynesly dari Divi Mariyi: <br>
+                                Try svichi voskovi, <br>
+                                Shche y ryzhy shovkovi <br>
+                                Isusovy Khrystovy <br>
+                                Try svichi voskovi, <br>
+                                Shche y ryzhy shovkovi <br>
+                                Isusovy Khrystovy <br>
                             </p>
 
-                            <p>Oy, zasyayala zvizda na nebi <br>
-                                Pryyshly anhely do Divi Mariyi <br>
-                                Spivayutʹ Yi pisni <br>
-                                Hospodniy Nevisti <br>
-                                I radosʹtʹ prynosyatʹ <br>
-                                Spivayutʹ Yi pisni <br>
-                                Hospodniy Nevisti <br>
-                                I radosʹtʹ prynosyatʹ <br>
+                            <p>OZasyala zvizda z neba do zemli,<br>
+                                Ziyshly Anhely k Divi Mariyi: <br>
+                                Spivayut Yi pisni <br>
+                                Hospodniy Nevisti, <br>
+                                I radiist' prynosyat <br>
+                                Spivayut Yi pisni <br>
+                                Hospodniy Nevisti, <br>
+                                I radiist' prynosyat <br>
                             </p>
 
                         </div>
@@ -481,13 +476,13 @@
                             <h2>Бог предвічний </h2>
                             <br>
                             <p> Бог предвічний народився <br>
-                                Прийшов до нас із небес, <br>
+                                Прийшов Днесь із небес, <br>
                                 Щоб спасти люд свій весь,<br>
                                 І утішився. <br>
                             </p>
                             <p> В Вифлеємі народився,<br>
                                 Месія, Христос наш,<br>
-                                І пан наш,для всіх нас,<br>
+                                І пан наш, для всіх нас,<br>
                                 Нам народився. <br>
                             </p>
                             <p> Ознаймив це Ангел Божий <br>
@@ -508,13 +503,13 @@
                             <h2>Boh predvichnyy</h2>
                             <br>
                             <p>Boh predvichnyy narodyvsya <br>
-                                Pryyshov do nas iz nebes, <br>
+                                Pryyshov Dnes iz nebes, <br>
                                 Shchob spasty lyud svyy ves', <br>
                                 I utyshyvsya. <br>
                             </p>
                             <p>V Vyfleyemi narodyvsya, <br>
                                 Mesiya, Khrystos nash, <br>
-                                I pan nash,dlya vsikh nas, <br>
+                                I pan nash, dlya vsikh nas, <br>
                                 Nam narodyvsya. <br>
                             </p>
                             <p>Oznaymyv tse Anhel Bozhiy <br>
